# hass-paris-markets

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
custom_components/paris_markets/: __init__.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py
custom_components/paris_markets/translations/: en.json  fr.json
tests/: conftest.py  test_binary_sensor.py  test_binary_sensor_localization.py  test_calendar.py  test_calendar_simple.py  test_config_flow.py  test_coordinator.py  test_sensor.py  test_sensor_localization.py
